Release CMTK-1.3.2:

- Refactored: use more smart pointers in more places. Standardize Clone() and
    Create() member functions of different classes.
- Improved: parallelized computation of FFD smoothness constraint. This
    greatly improves multicore scaling of nonrigid registration using this
    constraint. 
- Removed: "describe" tool no longer prints center of mass and first-order
    moments. If we ever need this, we'll make a separate tool for this.
- Refactored: further consolidated Vector3D into FixedVector
- Documentation: marked VTKWrapper library as deprecated.


Release CMTK-1.3.1 (2010-06-07):

- Added: "vtkxform" tool to apply transformation to point coordinates in VTK
    files (does not require VTK support to be enabled or VTK to be
    installed).
- Fixed: tiny numerical differences between division and multiplication with
    the inverse caused failed range check assertion in SplineWarpXform (Issue
    #4894). This is now fixed by replacing the assertion with a value range
    truncation. It ain't pretty, but it works.
- Configuration: added two CMake initial script files in config/ directory,
    which should support and standardize backward-compatible builds on
    MacOSX/Intel (Issue #4895; thanks to Greg Jefferis for suggesting these).
- Added: several features previously implemented only in congeal_warp have
    been ported into groupwise_rmi_warp. Also added tests for the latter.
- Refactored: completely reorganised the groupwise registration functional
    hierarchy - instead of redundant member functions in leaf classes, we are
    now using template specialization to inject the necessary transformation
    model-dependent code at the base of the hierarchy. 
- Fixed: previously undetected bug in AffineGroupwiseRegistrationRMI
    functional effectively led to inverse transformations to be computed.
- API: renamed CongealingFunctionalBase to more appropriate
    GroupwiseRegistrationFunctionalXformTemplate and removed unused second