@@ -188,7 +188,7 @@ SplineWarpGroupwiseRegistrationRMIFunctional::EvaluateLocalGradientThreadFunc
 	      
 	      Types::Coordinate vTest = v0 + (2*delta-1) * pStep;
 	      xform->SetParameter( xfparam, vTest );
-	      xform->GetTransformedGridSequence( &(vectorList[0]), pixelsPerLineVOI, voi->From()[0], y, z );
+	      xform->GetTransformedGridSequence( pixelsPerLineVOI, &(vectorList[0]), voi->From()[0], y, z );
 	      
 	      byte* rowDataPtr = ThisConst->m_Data[img] + rowofs;
 	      for ( size_t x = 0; x < pixelsPerLineVOI; ++x, ++rowDataPtr )
